restoran menu bootstrap

--- a/restaurant_template-master_bootstrap/css/media.css
+++ b/restaurant_template-master_bootstrap/css/media.css
@@ -23,9 +23,10 @@
         border: none;
     }
 
-    .menu__btn{
+    .burger{
         display: block;
     }
+
     .header__navbar>img{
         width: 45px;
     }
